--- a/Mysocket/makefile
+++ b/Mysocket/makefile
@@ -1,7 +1,7 @@
 CC = gcc -std=c11
 CFLAGS = -Wall -Wextra -pthread
 SRC_DIR = src
-BIN_DIR = bin
+BIN_DIR = .
 
 CLIENT_SRC = $(wildcard $(SRC_DIR)/client.c)
 SERVER_SRC = $(wildcard $(SRC_DIR)/server.c)
@@ -18,7 +18,9 @@ server: $(SERVER_OBJ)
 	$(CC) $(CFLAGS) $(SERVER_OBJ) -o $(BIN_DIR)/server
 
 $(BIN_DIR)/%.o: $(SRC_DIR)/%.c
+	@mkdir -p $(@D)  # Create the directory if it doesn't exist
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(BIN_DIR)/client $(BIN_DIR)/server $(CLIENT_OBJ) $(SERVER_OBJ)
+
